Fix: Conection button size & header wrap

--- a/src/pages/user/components/ConectionButtons.scss
+++ b/src/pages/user/components/ConectionButtons.scss
@@ -20,7 +20,7 @@
         font-size: 1rem;
 
         width: 100%;
-        min-width: 200px;
+        min-width: 100px;
 
         border-radius: 2.5px;
 
